k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
  name: laitonserver
spec:
  selector:
    app: laitonserver
  ports:
    - name: server
      port: 8080
      protocol: TCP
    - name: data
      port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laitonserver
  labels:
    app: laitonserver
spec:
  selector:
    matchLabels:
      app: laitonserver
  template:
    metadata:
      labels:
        app: laitonserver
    spec:
      containers:
        - name: laitonserver
          image: scienceboy1996/laitonserver
          volumeMounts:
            - mountPath: "/data"
              name: storage
          resources:
            requests:
              cpu: "100m"
        - name: nginx
          image: nginx
          imagePullPolicy: Always 
          volumeMounts:
            - mountPath: "/usr/share/nginx/html/data"
              name: storage
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: "100m"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: laitonserver-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laiton-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #ingressClassName: nginx-example
  rules:
  - host: laiton.duckdns.org
    http:
      paths:
      - path: /teamspirit
        pathType: Prefix
        backend:
          service:
            name: laitonserver
            port:
              number: 8080
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: laitonserver
            port:
              number: 80
---
